--- a/aidlclient/build.gradle
+++ b/aidlclient/build.gradle
@@ -2,20 +2,27 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
+
+
     defaultConfig {
-        applicationId "com.ting.android.aidldemo"
+        applicationId "com.ting.android.aidlclient"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     sourceSets {
         main {
             java.srcDirs = ['src/main/aidl']
@@ -36,6 +43,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
